ProfileList: Add a simple menu
Signed-off-by: Jason A. Donenfeld <Jason@zx2c4.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,7 @@
 <resources>
     <string name="app_name">WireGuard</string>
     <string name="connected">Connected</string>
+    <string name="create">Add</string>
     <string name="disconnected">Disconnected</string>
+    <string name="settings">Settings</string>
 </resources>
