--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="app_name">WireGuard</string>
     <string name="connected">Connected</string>
     <string name="disconnected">Disconnected</string>
+    <string name="edit">Edit</string>
     <string name="placeholder_text">No profile selected</string>
     <string name="profile_name">Profile name</string>
     <string name="public_key">Public key</string>
