ProfileEdit: Add empty activity/fragment
Signed-off-by: Jason A. Donenfeld <Jason@zx2c4.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="connected">Connected</string>
     <string name="disconnected">Disconnected</string>
     <string name="edit">Edit</string>
+    <string name="edit_activity_title">Edit WireGuard Profile</string>
     <string name="placeholder_text">No profile selected</string>
     <string name="profile_name">Profile name</string>
     <string name="public_key">Public key</string>
