--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <plurals name="list_delete_title">
+        <item quantity="one">%d configuration selected</item>
+        <item quantity="other">%d configurations selected</item>
+    </plurals>
     <string name="app_name">WireGuard</string>
     <string name="config_name">Configuration name</string>
     <string name="connected">Connected</string>
@@ -19,4 +23,5 @@
     <string name="public_key">Public key</string>
     <string name="save">Save</string>
     <string name="settings">Settings</string>
+    <string name="delete">Delete</string>
 </resources>
