SettingsActivity: Implement primary config setting
Signed-off-by: Jason A. Donenfeld <Jason@zx2c4.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,8 @@
     <string name="listen_port">Listen port</string>
     <string name="mtu">MTU</string>
     <string name="placeholder_text">No configuration selected</string>
+    <string name="primary_config">Primary configuration</string>
+    <string name="primary_config_summary">This configuration will be controlled by the quick settings tile</string>
     <string name="private_key">Private key</string>
     <string name="public_key">Public key</string>
     <string name="save">Save</string>
