Finish first pass of config editor fields

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,22 +5,28 @@
         <item quantity="other">%d configurations selected</item>
     </plurals>
     <string name="add">Add</string>
+    <string name="add_activity_title">New WireGuard configuration</string>
+    <string name="add_peer">Add peer</string>
+    <string name="addresses">Addresses</string>
+    <string name="allowed_ips">Allowed IPs</string>
     <string name="app_name">WireGuard</string>
-    <string name="config_name">Configuration name</string>
     <string name="delete">Delete</string>
     <string name="disabled">Disabled</string>
     <string name="dns_servers">DNS servers</string>
     <string name="edit">Edit</string>
-    <string name="edit_activity_title">Add WireGuard Configuration</string>
     <string name="enabled">Enabled</string>
+    <string name="endpoint">Endpoint</string>
     <string name="generate">Generate</string>
     <string name="hint_automatic">(auto)</string>
     <string name="hint_generated">(generated)</string>
-    <string name="hint_optional">(optional)</string>
     <string name="hint_random">(random)</string>
+    <string name="iface">Interface</string>
     <string name="listen_port">Listen port</string>
     <string name="loading">Loading</string>
     <string name="mtu">MTU</string>
+    <string name="name">Name</string>
+    <string name="peer">Peer</string>
+    <string name="persistent_keepalive">Persistent keepalive</string>
     <string name="placeholder_text">No configuration selected</string>
     <string name="primary_config">Primary configuration</string>
     <string name="primary_config_summary">This configuration will be controlled by the quick settings tile</string>
