--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="generate">Generate</string>
     <string name="hint_automatic">(auto)</string>
     <string name="hint_generated">(generated)</string>
+    <string name="hint_optional">(optional)</string>
     <string name="hint_random">(random)</string>
     <string name="iface">Interface</string>
     <string name="listen_port">Listen port</string>
@@ -28,6 +29,7 @@
     <string name="peer">Peer</string>
     <string name="persistent_keepalive">Persistent keepalive</string>
     <string name="placeholder_text">No configuration selected</string>
+    <string name="pre_shared_key">Pre-shared key</string>
     <string name="primary_config">Primary configuration</string>
     <string name="primary_config_summary">This configuration will be controlled by the quick settings tile</string>
     <string name="private_key">Private key</string>
