--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="settings">Settings</string>
     <string name="status">Status</string>
     <string name="toggle">Toggle</string>
+    <string name="import_config">Import</string>
 </resources>
