--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,15 +16,21 @@
     <string name="edit">Edit</string>
     <string name="enabled">Enabled</string>
     <string name="endpoint">Endpoint</string>
+    <string name="error_down">Error bringing down WireGuard tunnel</string>
+    <string name="error_missing">Missing wg(8) and/or wg-quick(8) in PATH</string>
+    <string name="error_up">Error bringing up WireGuard tunnel</string>
     <string name="generate">Generate</string>
     <string name="hint_automatic">(auto)</string>
     <string name="hint_generated">(generated)</string>
     <string name="hint_optional">(optional)</string>
     <string name="hint_random">(random)</string>
     <string name="iface">Interface</string>
+    <string name="import_config">Import</string>
     <string name="listen_port">Listen port</string>
     <string name="mtu">MTU</string>
     <string name="name">Name</string>
+    <string name="not_supported">WireGuard Not Supported</string>
+    <string name="not_supported_message"><![CDATA[<p>Your Android device does not currently support the WireGuard kernel module. Please talk to the manufacturer of your Android device or the author of your device\'s ROM about supporting the WireGuard kernel module.</p><br><p>Fortunately, the WireGuard development team is currently in the process of implementing support for WireGuard in a way that will work on all Android devices. This means that while you may not be able to use WireGuard today, in several weeks, things may very well be available for you.</p>]]></string>
     <string name="peer">Peer</string>
     <string name="persistent_keepalive">Persistent keepalive</string>
     <string name="placeholder_text">No configuration selected</string>
@@ -41,5 +47,4 @@
     <string name="settings">Settings</string>
     <string name="status">Status</string>
     <string name="toggle">Toggle</string>
-    <string name="import_config">Import</string>
 </resources>
