ConfigListFragment: Use a floating action menu
Signed-off-by: Jason A. Donenfeld <Jason@zx2c4.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,9 @@
         <item quantity="one">%d configuration selected</item>
         <item quantity="other">%d configurations selected</item>
     </plurals>
-    <string name="add">Add empty config</string>
     <string name="add_activity_title">New WireGuard configuration</string>
+    <string name="add_from_file">Add from file</string>
+    <string name="add_from_scratch">Add from scratch</string>
     <string name="add_peer">Add peer</string>
     <string name="addresses">Addresses</string>
     <string name="allowed_ips">Allowed IPs</string>
