VpnService: require root access
Signed-off-by: Jason A. Donenfeld <Jason@zx2c4.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="endpoint">Endpoint</string>
     <string name="error_down">Error bringing down WireGuard tunnel</string>
     <string name="error_missing">Missing wg(8) and/or wg-quick(8) in PATH</string>
+    <string name="error_su">WireGuard currently requires root access</string>
     <string name="error_up">Error bringing up WireGuard tunnel</string>
     <string name="generate">Generate</string>
     <string name="hint_automatic">(auto)</string>
