ToolsInstaller: Extract to its own classes
Signed-off-by: Samuel Holland <samuel@sholland.org>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,16 +58,16 @@
     <string name="public_key_description">Public key</string>
     <string name="restore_on_boot">Restore on boot</string>
     <string name="restore_on_boot_summary">Restore previously enabled configurations on boot</string>
-    <string name="install_cmd_line_tools">Install command line tools</string>
-    <string name="install_cmd_line_tools_summary">Install optional tools for scripting into /system/xbin</string>
-    <string name="install_cmd_line_tools_success">wg and wg-quick installed into /system/xbin</string>
-    <string name="install_cmd_line_tools_progress">Installing wg and wg-quick into /system/xbin</string>
-    <string name="install_cmd_line_tools_already">wg and wg-quick are already installed</string>
-    <string name="install_cmd_line_tools_failure">Command line tools could not be installed</string>
     <string name="save">Save</string>
     <string name="settings">Settings</string>
     <string name="status">Status</string>
     <string name="toggle">Toggle</string>
+    <string name="tools_installer_already">wg and wg-quick are already installed</string>
+    <string name="tools_installer_failure">Command line tools could not be installed (no root?)</string>
+    <string name="tools_installer_initial">Install optional tools for scripting into the system partition</string>
+    <string name="tools_installer_success">wg and wg-quick installed into the system partition</string>
+    <string name="tools_installer_title">Install command line tools</string>
+    <string name="tools_installer_working">Installing wg and wg-quick into the system partition</string>
     <string name="last_change">Last change</string>
     <string name="never">never</string>
 </resources>
