theme: add dark theme with toggle
Signed-off-by: Jason A. Donenfeld <Jason@zx2c4.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,9 @@
     <string name="create_activity_title">Create WireGuard Tunnel</string>
     <string name="create_empty">Create from scratch</string>
     <string name="create_from_file">Create from file or archive</string>
+    <string name="dark_theme_title">Use dark theme</string>
+    <string name="dark_theme_summary_on">Currently using dark night theme</string>
+    <string name="dark_theme_summary_off">Currently using light day theme</string>
     <string name="delete">Delete</string>
     <string name="dns_servers">DNS servers</string>
     <string name="edit">Edit</string>
