Settings: add version

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,5 +74,9 @@
     <string name="tunnel_create_success">Successfully created tunnel “%s”</string>
     <string name="tunnel_rename_error">Unable to rename tunnel: %s</string>
     <string name="tunnel_rename_success">Successfully renamed tunnel to “%s”</string>
+    <string name="version_title">WireGuard for Android v%s"</string>
+    <string name="version_kernel_summary">Using kernel module implementation v%s</string>
+    <string name="version_kernel_unknown_summary">Using unknown kernel module implementation</string>
+    <string name="version_userspace_summary">Using Go userspace implementation v%s</string>
     <string name="zip_exporter_title">Export tunnels to zip file</string>
 </resources>
